Ver 0.0.1
Latest:
- updating UserChallenges widget component

10 Most Recent:
- adding selector for MyCV title bar
- add organisations data to state
- add skills data to state
- merging MyChallenges into UserChallenges
- adding generic list component for CvCard/MyCV
- added jobs and user jobs to state
- adding User Challenges credentials to state
- adding helper utils for handling MyCV data
- docs upgrade, no new features added.
- Adjusted the widgets on MyCv to be able to take different types of content (previously they could only take text)