@@ -1,5 +1,15 @@
 import { UserChallengeFormFields } from './UserChallenges.types'
 
+export const INITIAL_FORM_VALUES: UserChallengeFormFields = {
+  challenge: '',
+  challengeHostProvider: '',
+  description: '',
+  id: '',
+  startDate: null,
+  endDate: null,
+  skillNames: [],
+}
+
 export const MOCKED_CHALLENGES = [
   {
     id: 'id1',
@@ -20,16 +30,6 @@ export const MOCKED_CHALLENGES = [
     description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. ',
   },
 ]
-
-export const INITIAL_VALUES: UserChallengeFormFields = {
-  challenge: '',
-  challengeHostProvider: '',
-  description: '',
-  id: '',
-  startDate: null,
-  endDate: null,
-  skillNames: [],
-}
 
 export const MOCK_SKILLS = [
   { label: 'UI', value: 'UI' },
