@@ -1,0 +1,3 @@
+import { RootState } from '../../redux/redux.types'
+
+export const selectUserChallenges = (state: RootState) => state.userChallenges
