@@ -1,31 +1,12 @@
 import { NormalisedData } from '../../redux/redux.types'
+import { Challenge } from '../Challenges/Challenges.types'
 import { UserCredentialMeta } from '../User/User.types'
-
-export interface Challenge {
-  organisationId: string
-  organisationName: string
-  organisationLogoURL: string | null
-  id: string
-  name: string
-  description: string
-  url: string | null
-  createdAt: string
-  zltoReward: number
-  createdByAdmin: boolean
-  language: string
-  startTime: string
-  endTime: string | null
-  published: boolean
-}
 
 export interface UserChallenge extends UserCredentialMeta {
   challenge: Challenge
 }
 
-export interface NormalisedUserChallenges {
-  ids: string[]
-  entities: Record<string, UserChallenge>
-}
+export type NormalisedUserChallenges = NormalisedData<UserChallenge>
 
 export interface UserChallengeItem
   extends Pick<Challenge, 'organisationLogoURL' | 'name'>,
@@ -39,7 +20,7 @@ export interface UserChallengesState extends NormalisedUserChallenges {}
 
 export type ChallengeEntry = {
   challenge: string
-  organisationLogoUrl: string
+  organisationLogoURL: string
   challengeHostProvider: string
   startDate: string
   endDate: string
